# MHlogic_circuit

./: .gitignore  MH20circuitdiag1.pg  MH20logic_circuit_1.json  MH20logic_circuit_1.pg  MH20logic_circuit_1.pg.jinja  MH20logic_circuit_1_configure.py  MH20logic_circuit_1_edits.pg  MH20logic_circuit_1_pg.py  MH20logic_circuit_1_tex.py  MHlogic_circuit_pg.py  MHlogic_circuit_tex.py  Makefile  README.md  TODO.md  logic_circuit_1.py  logic_circuit_1.tex.jinja  pyproject.toml  requirements.txt
configurations/: MH20logic_circuit_1_json.py  MH22logic_circuit_2_json.py  MH22logic_circuit_3_json.py  MH22logic_circuit_3b_json.py  MH22logic_circuit_6_json.py
pg/: snippets.pg
templates/: MH20logic_circuit_1.pg.jinja  MH22logic_circuit_2.pg.jinja  MH22logic_circuit_2.tex.jinja  MH22logic_circuit_3.pg.jinja  MH22logic_circuit_3.tex  MH22logic_circuit_3.tex.jinja  MH22logic_circuit_3b.pg.jinja  MH22logic_circuit_3b.tex.jinja  MH22logic_circuit_6.pg.jinja  MH22logic_circuit_6.tex.jinja
