[tool.poetry]
name = "ww_image"
version = "0.1.0"
description = "To learn how to produce multiple images for inclusion in a single WW problem."
authors = ["Malcolm Harper <mharper@crcmail.net>"]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
